Update for Patch v3.12.2 - checksum: 54e1

--- a/mod/thmod/localisation/english/astral_planes_l_english.yml
+++ b/mod/thmod/localisation/english/astral_planes_l_english.yml
@@ -314,7 +314,7 @@
  TRAIT_EXD_EFFECT: "Replaces $r_food$ Upkeep with $r_energy$ Upkeep\nEach pop working as a slave or better produces 0.5 £physics_research£ §YPhysics Research§! per month"
  origin_riftworld: "Riftworld"
  origin_riftworld_desc: "เป็นอารยธรรมที่มีรอยแยกมิติอวกาศและกาลเวลาใกล้ดาวบ้านเกิด ทำให้มีการศึกษาปรากฏการณ์มาอย่างช้านานจนมีเทคโนโลยีที่สามารถใช้สำรวจและค้นหาความลับในรอยแยกเหล่านี้ได้"
- origin_tooltip_riftworld_effects: "- ดาวบ้านเกิด: ['concept_riftworld_digsite'] ['concept_archaeology_site'] $NEW_LINE$- โอกาสที่[ 'concept_astral_rift', $ASTRAL_RIFTS$ ]จะปรากฏในระบบดาวที่คุณควบคุม: §G+100%§!"
+ origin_tooltip_riftworld_effects: "- ดาวบ้านเกิด: ['concept_archaeology_site'] ['concept_riftworld_digsite'] $NEW_LINE$- โอกาสที่[ 'concept_astral_rift', $ASTRAL_RIFTS$ ]จะปรากฏในระบบดาวที่คุณควบคุม: §G+100%§!"
  START_SCREEN_RIFTWORLD: "For as long as we can remember, the Great Rift has loomed in the skies above [GetHomeWorldName]. Legends propose that our past is intimately entwined with this mysterious celestial scar and an ancient impact site near our capital.\n\nFor generations, the site was revered, but little understood. However, recent seismic activity has uncovered subsurface anomalies in the crater. Preparations are already underway to drill into its core. Opinions remain divided on what we may uncover there.$START_SCREEN_RIFTWORLD_END$"
  START_SCREEN_RIFTWORLD_MACHINE: "For as long as our databanks reach back, the Great Rift has loomed in the skies above [GetHomeWorldName]. Our internal clocks are synced with the frequency of the celestial scar and our earliest records describe an ancient impact site near our capital.\n\nFor many iterations, the site was left alone, but little understood. However, recent seismic activity has uncovered subsurface anomalies in the crater. Preparations are already underway to drill into its core.$START_SCREEN_RIFTWORLD_END$"
  START_SCREEN_RIFTWORLD_END: "\n\nIs it simple coincidence that this has occurred at the advent of Hyperdrive technology? Just as we reach for the heavens, our attention is pulled back to the ground. Perhaps what what lies beneath the surface of this world is meant to aid us on our journey to the stars. Perhaps it can prepare us for whatever lies beyond the Rift."
@@ -374,7 +374,7 @@
  civic_corporate_hyperspace_specialty_effects: "$civic_hyperspace_specialty_effects$"
  civic_tooltip_not_hyperspace_specialty: "ไม่มีพลเมือง ['concept_hyperspace_specialty_civics']"
  concept_hyperspace_specialty_civics: "Hyperspace Specialty"
- concept_hyperspace_specialty_civics_desc: "$concept_hyperspace_specialty_civics$ Civics consist of \n- ['civic:civic_hyperspace_specialty']$NEW_LINE$- ['civic:civic_corporate_hyperspace_specialty']$NEW_LINE$- ['civic:civic_hive_hyperspace_specialty']$NEW_LINE$- ['civic:civic_machine_hyperspace_specialty']"
+ concept_hyperspace_specialty_civics_desc: "คุณสมบัติพลเมือง $concept_hyperspace_specialty_civics$ ประกอบด้วย \n- ['civic:civic_hyperspace_specialty']$NEW_LINE$- ['civic:civic_corporate_hyperspace_specialty']$NEW_LINE$- ['civic:civic_hive_hyperspace_specialty']$NEW_LINE$- ['civic:civic_machine_hyperspace_specialty']"
  civic_dimensional_worship: "บูชาข้ามมิติ"
  civic_dimensional_worship_desc: "This society believes that a divine existence lies beyond the folds in space and time. Systems where instabilities are highest hold a sacred meaning to them as sites of both pilgrimage and research."
  civic_dimensional_worship_effects: "Allows to build a §Y$sm_dimensional_shrine$§! starbase building in systems containing a §Y$WORMHOLE$§!, an §Y$pc_rift_star$§!, an §Y$ASTRAL_RIFT$§!, an §Y$LGATE_GALACTIC$§! or a §Y$SHROUD_TUNNEL_GALACTIC$§!.\nEach §Y$sm_dimensional_shrine$§! provides §G+$@dimensional_shrine_unity_production$§! £unity£."
@@ -409,7 +409,7 @@
  civic_sovereign_guardianship_effects_common: "Allows building a §Y$sm_reloading_bay$§! in starbases.\nEnables §Y$edict_inner_focus$§! §HEdict§!, converting £influence£ §YInfluence§! into £unity£ §YUnity§!."
  civic_tooltip_not_guardian: "ไม่มีพลเมือง ['concept_guardian_civics']"
  concept_guardian_civics: "Sovereign Guardianship"
- concept_guardian_civics_desc: "$concept_guardian_civics$ Civics consist of \n- ['civic:civic_sovereign_guardianship']$NEW_LINE$- ['civic:civic_corporate_sovereign_guardianship']$NEW_LINE$- ['civic:civic_hive_sovereign_guardianship']$NEW_LINE$- ['civic:civic_machine_sovereign_guardianship']"
+ concept_guardian_civics_desc: "คุณสมบัติพลเมือง $concept_guardian_civics$ ประกอบด้วย\n- ['civic:civic_sovereign_guardianship']$NEW_LINE$- ['civic:civic_corporate_sovereign_guardianship']$NEW_LINE$- ['civic:civic_hive_sovereign_guardianship']$NEW_LINE$- ['civic:civic_machine_sovereign_guardianship']"
  fanatic_guardian: "Fanatic Guardian"
  fanatic_guardian_plural: "Fanatic Guardians"
  fanatic_guardian_desc: "Stoic defenders of our homeland, these unshakeable soldiers are most effective when protecting those with whom they share a close relationship."
