--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -949,7 +949,7 @@
  NAMEPLATE_EMPTY_STRING: "$ttt$"
  REQUIREMENTS_HEADER: "§Eความต้องการ:§!"
  EFFECTS_HEADER: "§Eผล:§!"
- TOAST_HABITAT_BUILT_TITLE: "ที่อยู่อาศัยวงโคจรดาว (ซับซ้อน)"
+ TOAST_HABITAT_BUILT_TITLE: "ที่อยู่อาศัยวงโคจรดาว (ครบวงจร)"
  TOAST_HABITAT_BUILT_DESC: "[target_habitat.GetName] เสร็จสมบูรณ์แล้ว"
  TOAST_ORBITAL_BUILT_TITLE: "สิ่งปลูกสร้างในวงโคจร"
  TOAST_ORBITAL_BUILT_DESC: "สิ่งปลูกสร้างถูกสร้างขึ้นในวงโคจร [target_planet.GetName]"
@@ -965,9 +965,9 @@
  tech_habitat_3:0 "ที่อยู่อาศัยในอวกาศขั้นสูง"
  tech_habitat_3_desc:0 "Years of improvements to our §YOrbital Habitats§! have led us to create newer more effective designs."
  tech_habitat_3_effect:1 "$allow_habitat_2_upgrade$"
- habitat_1:1 "ที่อยู่อาศัยวงโคจรดาวแบบต่อเติม(ซับซ้อน)"
+ habitat_1:1 "ที่อยู่อาศัยวงโคจรดาวแบบต่อเติม(ครบวงจร)"
  habitat_1_DESC:0 "$habitat_0_DESC$"
- habitat_2:1 "ที่อยู่อาศัยวงโคจรดาวขั้นสูง(ซับซ้อน)"
+ habitat_2:1 "ที่อยู่อาศัยวงโคจรดาวขั้นสูง(ครบวงจร)"
  habitat_2_DESC:0 "$habitat_0_DESC$"
  allow_habitat_upgrade:1 "§Hปลดล็อกการตัดสินใจของดาวเคราะห์:§! $decision_upgrade_habitat$"
  allow_habitat_2_upgrade:1 "§Hปลดล็อกการตัดสินใจของดาวเคราะห์:§! $decision_upgrade_habitat_2$"
@@ -1006,18 +1006,18 @@
  habitat_central_complex_restored: "$habitat_central_complex$"
  habitat_central_complex_restored_DESC: "$habitat_central_complex_DESC$"
  cant_build_on_habitat:0 "§RCan't be built on Habitats§!"
- habitat_complex: "ที่อยู่อาศัยวงโคจรดาว(ซับซ้อน)"
- habitat_complex_plural: "ที่อยู่อาศัยวงโคจรดาว(ซับซ้อน)"
+ habitat_complex: "ที่อยู่อาศัยวงโคจรดาว(ครบวงจร)"
+ habitat_complex_plural: "ที่อยู่อาศัยวงโคจรดาว(ครบวงจร)"
  SHIP_GRAPHICS_HABITAT_CENTRAL_COMPLEX_DESC: "$habitat_central_complex_DESC$"
- habitat_central_complex: "ศูนย์กลางที่อยู่อาศัยวงโคจรดาว(ซับซ้อน)"
- habitat_central_complex_plural: "ศูนย์กลางที่อยู่อาศัยวงโคจรดาว(ซับซ้อน)"
- habitat_central_complex_DESC: "The central orbital of a §Y$habitat_complex$§!, capable of housing several £pop£ §YPops§! and providing space for £building£ §YBuildings§! and £district£ §YDistricts§! in orbit of uninhabitable planets."
+ habitat_central_complex: "ศูนย์กลางที่อยู่อาศัยวงโคจรดาว(ครบวงจร)"
+ habitat_central_complex_plural: "ศูนย์กลางที่อยู่อาศัยวงโคจรดาว(ครบวงจร)"
+ habitat_central_complex_DESC: "§Y$habitat_complex$§! รองรับ(เป็นที่อยู่) £pop£ §Yประชากร§! และมีพื้นที่สำหรับ £building£ §Yสิ่งปลูกสร้าง§! และ £district£ §Yเขต§! ต่างๆ ที่ระดับความสูงวงโคจรของดาวเคราะห์ ที่ไม่สามารถอยู่อาศัยได้"
  habitat_central_complex_MEGASTRUCTURE_DETAILS: "§Y$habitat_complex$§! คือกลุ่มของสิ่งปลูกสร้างวงโคจรที่พึ่งพาตนเองได้ ออกแบบมาเพื่อการอยู่อาศัยถาวร"
  habitat_central_complex_CONSTRUCTION_INFO_DELAYED: "$REQUIREMENTS_HEADER$ $major_orbital_requirements$ \n\n$EFFECTS_HEADER$ $NEW_LINE$- อาณานิคม (ขนาด: £planetsize£ 6) §Yที่อยู่อาศัยในอวกาศ§! จะถูกสร้างขึ้น $NEW_LINE$- $habitat_0_CONSTRUCTION_INFO_DELAYED$"
  requires_habitat_central_complex: "$TRIGGER_FAIL$§RRequires a $habitat_central_complex$ present in the system§!"
  requires_not_habitat_central_complex: "$TRIGGER_FAIL$§RCannot build due to existing $habitat_central_complex$ in the system§!"
  add_research_options_voidborn:0 "ตัวเลือกการวิจัยที่ได้รับหลังจากอัปเกรดที่อยู่อาศัยในอวกาศ:\n£engineering_research£§Y$tech_habitat_3$§!"
- HABITAT_PLANET_NAME:1 "สถานีที่อยู่อาศัยวงโคจร [FROM.from.solar_system.GetName] (ซับซ้อน)"
+ HABITAT_PLANET_NAME:1 "สถานีที่อยู่อาศัยวงโคจร [FROM.from.solar_system.GetName] (ครบวงจร)"
  TARGET_ORBITAL_NAME: "สถานีวงโคจร [FROM.from.planet.GetName]"
  orbital_DESC_GENERIC: "A basic orbital designed to provide additional living and working quarters for the population of the local §Y$habitat_central_complex$§!."
  orbital_MEGASTRUCTURE_DETAILS_ENDING: "เป็นที่อยู่อาศัยในอวกาศพื้นฐานที่ออกแบบมาเพื่อเป็นที่อยู่อาศัยและที่ทำงานเพิ่มเติมสำหรับประชากรในท้องถิ่นของ §Y$habitat_central_complex$§!"
@@ -1046,7 +1046,7 @@
  major_orbital_resource_plural: "Resource Extraction Orbitals"
  minor_orbital_resource: "$major_orbital_resource$"
  minor_orbital_resource_plural: "$major_orbital_resource_plural$"
- major_orbital_mining: "Astro-Mining Orbital"
+ major_orbital_mining: "สถานีทำเหมืองแร่อวกาศ (โคจร)"
  major_orbital_mining_plural: "สถานีทำเหมืองแร่อวกาศ (โคจร)"
  minor_orbital_mining: "$major_orbital_mining$"
  minor_orbital_mining_plural: "$major_orbital_mining_plural$"
