--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -41,7 +41,7 @@
  origin_syncretic_evolution_desc:0 "สิ่งมีชีวิตชนิดที่สองเป็นส่วนสำคัญของอารยธรรมนี้ พวกเขาตัวใหญ่แข็งแรงและส่วนใหญ่จะมีความฉลาดเหมือนเด็กที่มีความบกพร่อง สงครามสมัยโบราณได้กำจัดสายพันธุ์ของพวกเขาที่มีแนวโน้มก้าวร้าวมากที่สุดออกไป"
  origin_tooltip_syncretic_evolution_effects: "- £pop£ §Iประชากร§! สิ่งมีชีวิตที่มีคุณลักษณะ ['concept_syncretic_proles']: 12"
  origin_life_seeded:0 "$civic_life_seeded$"
- origin_life_seeded_desc:1 "This civilization's home is a paradise, possibly designed just for them."
+ origin_life_seeded_desc:1 "บ้านของอารยธรรมแห่งนี้เปรียบเสมือนสวรรค์ ซึ่งอาจออกแบบมาสำหรับพวกเขาโดยเฉพาะ"
  origin_tooltip_life_seeded_effects: "- $HOMEWORLD$ ['concept_pc_gaia'] (ขนาด: £planetsize£ 30) มี §Iคุณสมบัติของดาวเคราะห์ที่หายาก§!$NEW_LINE$- $SPECIES_TRAITS$ ['concept_gaia_preference']"
  origin_tooltip_life_seeded_negative_effects: "- $NO_GUARANTEED_WORLDS$"
  origin_post_apocalyptic:0 "$civic_post_apocalyptic$"
@@ -49,8 +49,8 @@
  origin_life_seeded_ai_only_desc: "$origin_life_seeded_desc$"
  origin_post_apocalyptic_desc:1 "Baptized by nuclear fire, this civilization has faced total annihilation - and survived. Devastated yet unbroken, they have rebuilt civilization from the ashes of their old world."
  origin_tooltip_post_apocalyptic_effects: "- $HOMEWORLD$ ['concept_pc_nuked']$NEW_LINE$- $SPECIES_TRAITS$ ['concept_survivor']"
- origin_post_apocalyptic_machines: "Radioactive Rovers"
- origin_post_apocalyptic_machines_desc: "In the aftermath of a devastating nuclear disaster, these machines emerged as the sole survivors of a once-flourishing civilization. By continuing to fulfill their designated purpose, they gradually rebuilt society from the uninhabitable ashes of their old world."
+ origin_post_apocalyptic_machines: "ผู้พเนจรกัมมันตภาพรังสี"
+ origin_post_apocalyptic_machines_desc: "หลังจากเกิดภัยพิบัตินิวเคลียร์ เครื่องจักรเหล่านี้กลายเป็นผู้เหลือรอดเพียงหนึ่งเดียวจากอารยธรรมที่ครั้งหนึ่งเคยรุ่งเรือง ด้วยการบรรลุเป้าหมายที่กำหนดไว้อย่างต่อเนื่อง พวกเขาจึงค่อยๆสร้างสังคมขึ้นมาใหม่จากเถ้าถ่านของโลกเก่าที่ตอนนี้ไม่สามารถอยู่อาศัยได้แล้ว"
  origin_tooltip_post_apocalyptic_machines_effects: "- $HOMEWORLD$ ['concept_pc_nuked']$NEW_LINE$- $SPECIES_TRAITS$ ['concept_robot_survivor']"
  origin_shattered_ring:0 "วงแหวนที่แตกหัก"
  origin_shattered_ring_desc:1 "This civilization inhabits a Ring World built by unknown forerunners. If it can be understood and fully repaired it will grant them great power."
@@ -94,12 +94,12 @@
  d_tree_of_life_home_desc:0 "The Great Tree has sheltered and supported the Hive for untold generations."
  d_tree_of_life_colony:2 "หน่อต้นอ่อนของต้นไม้แห่งชีวิต"
  d_tree_of_life_colony_desc:1 "An offshoot of the Great Tree, transplanted here by the Hive. It will take millennia for it to fully mature."
- d_lithoid_crater:0 "Massive Crater"
+ d_lithoid_crater:0 "ปล่องภูเขาไฟขนาดใหญ่"
  d_lithoid_crater_desc:0 "The impact site of the meteorite which brought Lithoids to this planet."
  d_lithoid_crater_custom_tooltip: "$t$Increases the effect of §YLithoid Traits§! by §G+50%§!"
- d_buried_lithoids:2 "£blocker£ Buried Lithoids"
+ d_buried_lithoids:2 "£blocker£ ลิธอยด์ที่ถูกฝัง"
  d_buried_lithoids_desc:0 "These Lithoids were driven deep into the ground when they fell from orbit."
- lithoid_crater:0 "Lithoid Crater"
+ lithoid_crater:0 "หลุม Lithoid"
  lithoid_crater_desc:0 "This large crater is the result of a Lithoid-bearing meteorite slamming into the planet."
  lithoid_colonizer:0 "Lithoid Meteorite"
  lithoid_colonizer_plural:0 "Lithoid Meteorites"
@@ -107,7 +107,7 @@
  d_machine_minerals_desc:0 "The refined mineral wealth of an entire Solar system is gathered here in continent-sized piles."
  d_organic_slurry:1 "สารละลายอินทรีย์"
  d_organic_slurry_desc:0 "มหาสมุทรแห่งสารละลายอินทรีย์ ซึ่งเป็นซากที่ผ่านการแปรรูปของชีวมวลในอดีตของดาวเคราะห์"
- d_resource_consolidation_1:2 "£blocker£ Malfunctioning Replicator Bay"
+ d_resource_consolidation_1:2 "£blocker£ พื้นที่เก็บเครื่องจำลองที่ทำงานผิดปกติ"
  d_resource_consolidation_1_desc:0 "The replicator bay built into the Machine World is malfunctioning, producing endless piles of $MACHINE_hand_plural$."
  d_malfunctioning_reactor:0 "Malfunctioning Reactor"
  d_malfunctioning_reactor_desc:0 "The reactor powering the various climate control and gravitational systems of this section is malfunctioning. Hazardous weather conditions and fluctuating gravity make it difficult to settle parts of this segment."
@@ -2089,10 +2089,10 @@
  trait_void_dweller_1:0 "ผู้อยู่อาศัยในอวกาศ"
  trait_void_dweller_1_desc:2 "§LThis species thrives in orbital habitats, with an inherent ability to efficiently navigate their maze-like corridors and complicated architecture. They are at ease in zero gravity but do not respond well to a planetary environment.§!"
  void_dweller_trait_tooltip:0 "ความสุขของประชากรบนดาวที่ธรรมชาติสร้างขึ้น: §R-30%§!"
- origin_void_machines: "Voidforged"
+ origin_void_machines: "เดินทางฝ่าฟันในอวกาศ"
  origin_void_machines_desc: "At first, the creators of this machine civilization designed them for eternal space travel, fully optimizing them to function seamlessly in zero gravity environments. After enduring eons of isolation, these machines have recently restored unity among the orbital habitats scattered throughout their home system."
- origin_tooltip_void_machines_effects: "- $HOMEWORLD$ ['concept_pc_habitat']$NEW_LINE$- $SPECIES_TRAITS$$TABBED_NEW_LINE$- ['concept_void_dweller_2', $trait_void_dweller_2$]$TABBED_NEW_LINE$- ['concept_habitat_preference', $trait_pc_habitat_preference$]$NEW_LINE$- $ADDITONAL_TECHNOLOGIES_STRING$ ['concept_habitat_1', £engineering_research£ $tech_habitat_1$]$NEW_LINE$- $GUARANTEED_RESEARCH_OPTION_STRING$ ['concept_habitat_2', £engineering_research£ $tech_habitat_2$]$NEW_LINE$- ['concept_guaranteed_colonies']: Resource-rich systems instead of Colonizable Planets $NEW_LINE$- $ap_voidborn_habitat_effect$"
- trait_void_dweller_2:1 "Zero-G Optimized"
+ origin_tooltip_void_machines_effects: "- $HOMEWORLD$ ['concept_pc_habitat']$NEW_LINE$- $SPECIES_TRAITS$$TABBED_NEW_LINE$- ['concept_void_dweller_2', $trait_void_dweller_2$]$TABBED_NEW_LINE$- ['concept_habitat_preference', $trait_pc_habitat_preference$]$NEW_LINE$- $ADDITONAL_TECHNOLOGIES_STRING$ ['concept_habitat_1', £engineering_research£ $tech_habitat_1$]$NEW_LINE$- $GUARANTEED_RESEARCH_OPTION_STRING$ ['concept_habitat_2', £engineering_research£ $tech_habitat_2$]$NEW_LINE$- ['concept_guaranteed_colonies']: ระบบดาวที่อุดมด้วยทรัพยากรแทนที่จะเป็นดาวเคราะห์อาณานิคม $NEW_LINE$- $ap_voidborn_habitat_effect$"
+ trait_void_dweller_2:1 "ปรับให้เหมาะสมกับสภาพแรงโน้มถ่วงเป็นศูนย์"
  trait_void_dweller_2_desc:1 "§LThese machines thrive in orbital habitats, programmed with algorithms to efficiently navigate their maze-like corridors and complicated architecture. However, their optimized construction is poorly suited to a planetary environment.§!"
  void_dweller_2_trait_tooltip: "Robot Upkeep on Non-Artificial Worlds: §R+15%§!"
  mod_habitat_max_districts_mult: "ที่อยู่อาศัยในอวกาศ $MOD_PLANET_MAX_DISTRICTS_MULT$"
@@ -2352,8 +2352,8 @@
  origin_common_ground_npc:0 "$origin_common_ground$"
  origin_common_ground_npc_desc:0 "$origin_common_ground_desc$"
  civic_tooltip_not_genocidal:0 "ไม่มีพลเมือง ['concept_genocidal_civics']"
- concept_genocidal_civics: "Genocidal"
- concept_genocidal_civics_desc: "$concept_genocidal_civics$ Civics consist of \n- ['civic:civic_fanatic_purifiers']$NEW_LINE$- ['civic:civic_hive_devouring_swarm']$NEW_LINE$- ['civic:civic_machine_terminator']"
+ concept_genocidal_civics: "ฆ่าล้างเผ่าพันธุ์"
+ concept_genocidal_civics_desc: "คุณสมบัติพลเมือง $concept_genocidal_civics$ ประกอบด้วย \n- ['civic:civic_fanatic_purifiers']$NEW_LINE$- ['civic:civic_hive_devouring_swarm']$NEW_LINE$- ['civic:civic_machine_terminator']"
  origin.57.name:0 "The Nature of the Alliance"
  origin.57.desc:0 "Though we have for some time been in contact with the other members of our alliance, it is only now - with the invention of FTL drives - that our empires are able to interact with each other on a meaningful level. The question has arisen as to what our federation should focus on: some advocate the current, generalist path, whereas others would favor focusing on closer integration in a particular field."
  origin.57.A:0 "The alliance we have is enough."
