--- a/mod/thmod/localisation/english/job_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/job_concepts_l_english.yml
@@ -12,9 +12,9 @@
  concept_artisan: "$job_artisan_plural$"
  concept_artisan_desc: "$job_artisan_plural$ turn $i_minerals$ into $i_consumer_goods$.\n\n§L$job_artisan_desc$§!"
  concept_soldier: "$job_soldier_plural$"
- concept_soldier_desc: "$job_soldier_plural$ produce $i_naval_capacity$ and $i_defense_armies$.\n\n§L$job_soldier_desc$§!"
+ concept_soldier_desc: "$job_soldier_plural$ ผลิต $i_naval_capacity$ และ $i_defense_armies$.\n\n§L$job_soldier_desc$§!"
  concept_priest: "$job_priest_plural$"
- concept_priest_desc: "$job_priest_plural$ turn $i_consumer_goods$ into $i_unity$ and $i_amenities$.\n\n§L$job_priest_desc$§!"
+ concept_priest_desc: "$job_priest_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_unity$ และ $i_amenities$\n\n§L$job_priest_desc$§!"
  concept_high_priest: "$job_high_priest_plural$"
  concept_high_priest_desc: "$job_high_priest_plural$ turn $i_consumer_goods$ into $i_unity$ and $i_amenities$.\n\n§L$job_high_priest_desc$§!"
  concept_haruspex: "$job_haruspex_plural$"
