--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -1623,7 +1623,7 @@
  mod_planet_sr_miners_produces_mult:0 "$r_strategic_plural$ จาก ผู้เก็บรวบรวมทรัพยากรเชิงยุทธศาสตร์"
  mod_planet_metallurgists_alloys_produces_mult:1 "£alloys£ $alloys$จาก £job_foundry£ [GetAlloyProducerPlural]"
  mod_planet_metallurgists_alloys_produces_add:0 "$mod_planet_metallurgists_alloys_produces_mult$"
- mod_planet_metallurgists_sr_living_metal_produces_add: "£sr_living_metal£ $sr_living_metal$ from £job_foundry£ §Y[GetAlloyProducerPlural]§!"
+ mod_planet_metallurgists_sr_living_metal_produces_add: "£sr_living_metal£ $sr_living_metal$ จาก £job_foundry£ §Y[GetAlloyProducerPlural]§!"
  mod_planet_metallurgists_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ £job_foundry£ [GetAlloyProducerPlural]"
  mod_planet_metallurgists_minerals_upkeep_add:0 "£minerals£ $minerals$ ที่เป็นค่าบำรุงรักษาของ £job_foundry£ [GetAlloyProducerPlural]"
  mod_planet_metallurgists_food_upkeep_add:0 "£food£ $food$ ที่เป็นค่าบำรุงรักษาของ £job_foundry£ [GetAlloyProducerPlural]"
@@ -1691,7 +1691,7 @@
  mod_planet_soldiers_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ £job_soldier£ [GetSoldierPlural]"
  mod_planet_entertainers_produces_mult:0 "ทรัพยากรจาก [GetEntertainerPluralWithIcon]"
  mod_planet_entertainers_unity_produces_add:0 "£unity£ $unity$ จาก [GetEntertainerPluralWithIcon]"
- mod_planet_doctors_unity_produces_add: "£unity£ $unity$ from £job_healthcare£ $job_healthcare_plural$"
+ mod_planet_doctors_unity_produces_add: "£unity£ $unity$ จาก £job_healthcare£ $job_healthcare_plural$"
  mod_planet_entertainers_engineering_research_produces_add: "£engineering£ $engineering_research$ from [GetEntertainerPluralWithIcon]"
  mod_station_gatherers_produces_mult:0 "ผลผลิตของสถานีเหมืองแร่"
  mod_station_researchers_produces_mult:0 "ผลผลิตของสถานีวิจัย"
@@ -2104,7 +2104,7 @@
  d_ancient_battlefield_desc:1 "The civilization that once inhabited this world was destroyed by an invading force from somewhere beyond their solar system. This ancient battlefield is littered with ancient debris from their desperate last stand."
  d_irradiated_ruins:0 "Irradiated Ruins"
  d_irradiated_ruins_desc:1 "Remnants from a massive nuclear war waged by the two global superpowers that once inhabited this world."
- d_impact_crater:0 "Impact Crater"
+ d_impact_crater:0 "หลุมอุกกาบาต"
  d_impact_crater_desc:1 "A crater from a large meteor impact. Minerals from the meteor itself can still be found at the site."
  d_odd_factory:0 "โรงงานย่อย"
  d_odd_factory_desc:0 "A well-crafted facility that produces high value resources, left on the planet by a different civilization."
@@ -2136,7 +2136,7 @@
  d_reactor_belt_desc:1 "A stretch of reactor complexes reaching almost farther than the ocular implant can see."
  d_underground_farm:0 "Subterranean Farming Caverns"
  d_underground_farm_desc:0 "A network of vast caverns which contain numerous fungal farms, hunting areas, and lakes teeming with edible flora and fauna."
- d_underground_mine:0 "Subterranean Mining Sites"
+ d_underground_mine:0 "แหล่งขุดแร่ใต้ดิน"
  d_underground_mine_desc:0 "Underground tunnels lead to a variety of mineral-rich ore veins inaccessible from the surface."
  d_underground_generator:0 "Subterranean Generator Areas"
  d_underground_generator_desc:0 "Subterranean rivers and the geothermal energy from the molten core of the planet offer vast potential for energy generation."
