--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -23,7 +23,7 @@
  MOD_COUNTRY_TRUST_CAP_MULT:0 "ความเชื่อใจสูงสุด"
  MOD_COUNTRY_SUBJECT_POWER_PENALTY:0 "โทษของความสัมพันธ์กับบริวาร"
  MOD_COUNTRY_SUBJECT_TRUST_CAP_ADD:0 "ความเชื่อใจของบริวารสูงสุด"
- MOD_COUNTRY_SPECIALIST_SUBJECT_CONVERSION_TIME_MULT: "Subject Specialization Conversion Time"
+ MOD_COUNTRY_SPECIALIST_SUBJECT_CONVERSION_TIME_MULT: "ระยะเวลาในการเปลี่ยนแปลงประเภทของจักรวรรดิบริวาร (เมืองขึ้น)"
  MOD_COUNTRY_SYNTHETIC_TRUST_CAP_ADD:0 "ความเชื่อใจต่อจักรกลสังเคราะห์"
  MOD_COUNTRY_ORGANIC_TRUST_CAP_ADD:0 "ความเชื่อใจต่อสิ่งมีชีวิต"
  MOD_COUNTRY_ELECTION_COST:1 "ค่าใช้จ่ายในการเลือกตั้ง"
@@ -352,7 +352,7 @@
  MOD_ARMY_DAMAGE_MULT:0 "พลังโจมตีของทหาร"
  MOD_ARMY_COLLATERAL_DAMAGE_MULT:0 "ทำความเสียหายข้างเคียงกับทหาร"
  MOD_ARMY_MORALE_DAMAGE_MULT:1 "ทำความเสียหายกับขวัญกำลังใจของทหาร"
- MOD_ARMY_DAMAGE_TAKEN_MULT: "Army Damage Taken"
+ MOD_ARMY_DAMAGE_TAKEN_MULT: "ทหารได้รับพลังโจมตี"
  MOD_ARMY_MORALE_DAMAGE_TAKEN_MULT: "Army Morale Damage Taken"
  MOD_ARMY_ATTACK_HEALTH_MULT:0 "พลังชีวิตกองทัพจู่โจม"
  MOD_ARMY_DEFENSE_HEALTH_MULT:0 "พลังชีวิตกองทัพป้องกัน"
@@ -363,7 +363,7 @@
  MOD_ARMY_ATTACK_MORALE_MULT:1 "ขวัญกำลังใจกองทัพจู่โจม"
  MOD_ARMY_ATTACK_DAMAGE_MULT:1 "พลังโจมตีทหารจู่โจม"
  MOD_ARMY_EXPERIENCE_GAIN_MULT:0 "เพิ่มค่าประสบการณ์กองทัพ"
- MOD_ARMY_DAMAGE_EMPIRE_SPRAWL_PENALTY_MULT: "Army Damage Penalty due to Empire Sprawl"
+ MOD_ARMY_DAMAGE_EMPIRE_SPRAWL_PENALTY_MULT: "พลังโจมตีของทหารได้รับโทษเนื่องจากการแผ่ขยายของจักรวรรดิ"
  MOD_PLANET_HOUSING_ADD:0 "ที่อยู่อาศัย"
  MOD_PLANET_HOUSING_MULT:0 "$MOD_PLANET_HOUSING_ADD$"
  MOD_PLANET_CARRY_CAP_ADD:0 "$CARRY_CAP$"
@@ -509,12 +509,12 @@
  MOD_LEADER_SKILL_LEVELS:0 "เลเวลผู้นำสูงสุด"
  MOD_LEADER_LIFESPAN_ADD: "อายุขัยผู้นำ"
  MOD_LEADER_LIFESPAN_MULT: "$MOD_LEADER_LIFESPAN_ADD$"
- MOD_LEADER_STARTING_AGE_ADD: "Leader Starting Age"
- MOD_LEADER_STARTING_AGE_MULT: "Leader Starting Age"
- MOD_RULER_STARTING_AGE_ADD: "Ruler Starting Age"
- MOD_RULER_STARTING_AGE_MULT: "Ruler Starting Age"
- MOD_HEIR_STARTING_AGE_ADD: "Heir Starting Age"
- MOD_HEIR_STARTING_AGE_MULT: "Heir Starting Age"
+ MOD_LEADER_STARTING_AGE_ADD: "ผู้นำอายุเริ่มต้น"
+ MOD_LEADER_STARTING_AGE_MULT: "ผู้นำอายุเริ่มต้น"
+ MOD_RULER_STARTING_AGE_ADD: "ผู้ปกครองอายุเริ่มต้น"
+ MOD_RULER_STARTING_AGE_MULT: "ผู้ปกครองอายุเริ่มต้น"
+ MOD_HEIR_STARTING_AGE_ADD: "รัชทายาทอายุเริ่มต้น"
+ MOD_HEIR_STARTING_AGE_MULT: "รัชทายาทอายุเริ่มต้น"
  MOD_LEADER_ADMIRAL_SKILL_LEVELS:0 "เลเวลพลเรือเอกสูงสุด"
  MOD_LEADER_GENERAL_SKILL_LEVELS:0 "เลเวลพลเอกสูงสุด"
  MOD_LEADER_COMMANDER_SKILL_LEVELS: "Commander Level Cap"
@@ -572,8 +572,8 @@
  MOD_STARBASE_DEFENSE_PLATFORM_CAPACITY_MULT:0 "$MOD_STARBASE_DEFENSE_PLATFORM_CAPACITY_ADD$"
  MOD_COUNTRY_STARBASE_CAPACITY_ADD:0 "$STARBASE_CAPACITY_TITLE$"
  MOD_COUNTRY_STARBASE_CAPACITY_MULT:0 "$STARBASE_CAPACITY_TITLE$"
- MOD_COUNTRY_ENCLAVE_CAPACITY_ADD:0 "Mercenary Enclave Capacity"
- MOD_COUNTRY_ENCLAVE_CAPACITY_MULT:0 "Mercenary Enclave Capacity"
+ MOD_COUNTRY_ENCLAVE_CAPACITY_ADD:0 "ความจุกองยานทหารรับจ้าง Enclave"
+ MOD_COUNTRY_ENCLAVE_CAPACITY_MULT:0 "ความจุกองยานทหารรับจ้าง Enclave"
  MOD_STARBASE_TRADE_COLLECTION_RANGE_ADD:2 "ระยะการเก็บรวบรวม"
  MOD_STARBASE_TRADE_PROTECTION_RANGE_ADD:2 "ระยะการป้องกัน"
  MOD_STARBASE_TRADE_PROTECTION_ADD:0 "การคุ้มครองการค้า"
@@ -1051,7 +1051,7 @@
  mod_pc_habitat_habitability:0 "การอยู่อาศัยได้ในที่อยู่อาศัยในอวกาศ"
  mod_pc_shattered_ring_habitable_habitability:0 "Shattered Ring Habitability"
  MOD_HABITABILITY_FLOOR:0 "การอยู่อาศัยได้ขั้นต่ำของเผ่าต่างๆ"
- MOD_HABITABILITY_CEIL:0 "Species Habitability Cap"
+ MOD_HABITABILITY_CEIL:0 "เพดานการอยู่อาศัยได้ของเผ่าพันธุ์ต่างๆ"
  MOD_HABITABILITY_FLOOR_ADD:0 "$MOD_HABITABILITY_FLOOR$"
  MOD_HABITABILITY_FLOOR_MULT:0 "$MOD_HABITABILITY_FLOOR$"
  MOD_HABITABILITY_CEIL_ADD:0 "$MOD_HABITABILITY_CEIL$"
@@ -1096,7 +1096,7 @@
  triggered_dc_opinion_of_servitors:0 "Oppressors"
  triggered_dc_opinion_of_assimilators:0 "$triggered_dc_opinion_of_servitors$"
  triggered_spiritualist_fe_opinion_of_spiritualist_machine_empires: "$opinion_synthetics_fanatic$"
- triggered_individual_machine_opinion_of_individual_machine_empires: "Individual Machines"
+ triggered_individual_machine_opinion_of_individual_machine_empires: "จักรวรรดิเครื่องจักรที่มีบุคลิกลักษณะเฉพาะตัว (ปัจเจกจักรกล)"
  triggered_spiritualist_opinion_of_spiritualists_machine_empires: "$opinion_synthetics_fanatic$"
  triggered_fanatic_spiritualist_opinion_of_spiritualists_machine_empires: "$opinion_synthetics_fanatic$"
  triggered_opinion_xenophobia:0 "กลัวต่างดาว"
@@ -1494,7 +1494,7 @@
  starship_graveyard_desc:1 "A great battle took place in orbit of this world millennia ago, and the surface is still littered with the wreckage of ancient starships. Studying their advanced designs will yield valuable knowledge."
  organic_starship:0 "Organic Starship"
  organic_starship_desc:1 "Some sort of organic starship crashed on this world more than three billion years ago. Though only its ancient bones remain, the site offers a wealth of research opportunities."
- abandoned_cities:0 "Abandoned Cities"
+ abandoned_cities:0 "เมืองที่ถูกทิ้งร้าง"
  abandoned_cities_desc:0 "The original inhabitants of this world have mysteriously vanished, leaving behind their cities and infrastructure almost intact. This will make it much easier for a potential colony to develop."
  subterranean_ocean:0 "มหาสมุทรใต้ดิน"
  subterranean_ocean_desc:1 "There is a large ocean heated by hydrothermal vents hidden beneath the ice mantle of this world. It is teeming with life, and much can be learned by studying these unique organisms."
@@ -1586,7 +1586,7 @@
  mod_FUN_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนเห็ดรา"
  mod_PLANT_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งมีชีวิตประเภทพืช"
  mod_LITHOID_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งมีชีวิตประเภทหิน"
- mod_ROBOT_species_trait_points_add:0 "Mechanical Modification Points"
+ mod_ROBOT_species_trait_points_add:0 "แต้มปรับเปลี่ยนจักรกล (เครื่องจักร)"
  mod_MACHINE_species_trait_points_add:0 "แต้มการปรับเปลี่ยนเครื่องจักร"
  mod_BIOLOGICAL_species_trait_points_add:0 "$species_trait_points_add$"
  mod_pc_machine_habitability:0 "การอยู่อาศัยได้ในดาวเครื่องจักร"
