--- a/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
@@ -159,8 +159,8 @@
  NAME_Superstructure_II:0 "Superstructure II"
  NAME_Superstructure_III:0 "Superstructure III"
  NAME_Dead_Species:0 "Dead Species"
- NAME_Synthetic:0 "Synthetic"
- NAME_Synthetic_plural:0 "Synthetics"
+ NAME_Synthetic:0 "จักรกลสังเคราะห์"
+ NAME_Synthetic_plural:0 "จักรกลสังเคราะห์"
  NAME_Adjuster:0 "Adjuster"
  NAME_Alpha:0 "Alpha"
  NAME_Archivist:0 "Archivist"
