--- a/mod/thmod/localisation/english/name_lists/name_lists_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/name_lists_l_english.yml
@@ -736,9 +736,9 @@
  CYBERNETIC:1 "ไซเบอร์เนติก"
  CYBERNETIC_desc:1 "Species Class has no effect on your Empire, but Cybernetic-class Species may consider other Cybernetics to be less alien than other Species Classes."
  CYBERNETIC_plural:0 "ไซเบอร์เนติก"
- SYNTH: "Synthetic"
+ SYNTH: "จักรกลสังเคราะห์"
  SYNTH_desc:1 "Species Class has no effect on your Empire, but Synthetic-class Species may consider other Synthetics to be less alien than other Species Classes."
- SYNTH_plural:0 "Synthetics"
+ SYNTH_plural:0 "จักรกลสังเคราะห์"
  SALVAGER:0 "$MAM$"
  SALVAGER_desc:0 "$MAM_desc$"
  SALVAGER_plural:0 "$MAM_plural$"
