--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -107,9 +107,9 @@
  specialist_conversion_time_estimated:0 "Conversion to $SPECIALIZATION|Y$ will take around $DAYS|Y0$ days"
  specialist_conversion_losing_specialization:0 "$NAME|Y$'s $SPECIALIZATION|Y$ Specialization will be lost!"
  specialist_conversion_base_time:0 "Base: $DAYS|Y0$ days"
- specialist_conversion_time_from_sprawl:0 "From $SPRAWL|Y$ £empire_sprawl£ $EMPIRE_SIZE$: +$TIME_PERCENT$ conversion time"
- specialist_conversion_speed_from_ethic:0 "From being $ETHIC|Y$: $TIME_PERCENT$ conversion time"
- specialist_conversion_time_from_overlord: "From Overlord $OVERLORD|Y$: $TIME_PERCENT$ conversion time"
+ specialist_conversion_time_from_sprawl:0 "จาก $SPRAWL|Y$ £empire_sprawl£ $EMPIRE_SIZE$: ระยะเวลาในการเปลี่ยนแปลง +$TIME_PERCENT$"
+ specialist_conversion_speed_from_ethic:0 "จากการเป็น $ETHIC|Y$: ระยะเวลาในการเปลี่ยนแปลง $TIME_PERCENT$"
+ specialist_conversion_time_from_overlord: "จากเจ้าเหนือหัว $OVERLORD|Y$: ระยะเวลาในการเปลี่ยนแปลง $TIME_PERCENT$"
  specialist_conversion_monthly_cost:1 "Monthly Cost for Overlord: $COST$"
  specialist_bulwark_overlord_modifier:0 "Bulwark Advisory"
  specialist_bulwark_overlord_modifier_desc:0 "§LAdvisors from our Bulwark specialists contribute to the efficient construction of our own defense.§!"
@@ -529,7 +529,7 @@
  no_branch_office:0 "$TRIGGER_FAIL$§RRequires a [owner.overlord.GetName] Branch Office.§!"
  planet_corporate_franchising_meddling:0 "Corporate Interference"
  holding_franchise_headquarters_ethics_effect:0 "\nIf the Overlord has Fanatic Ethics, provides §G+100%§! Ethics Attraction for that Ethos."
- holding_experimental_crater:0 "Experimental Crater"
+ holding_experimental_crater:0 "หลุมทดลอง"
  holding_experimental_crater_desc:0 "A designated area for testing new asteroidal colony ships. It might not be the most convenient way to test the ships, but outsourcing the process definitely saves on the clean-up costs for the Overlord."
  holding_experimental_crater_effect:0 "§YCaution:§!\n     Incoming colony "ships" may §REXPLODE§!!"
  MESSAGE_OVERLORD_CRATER_TITLE:0 "Experimental Colony Asteroid"
