--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -160,7 +160,7 @@
  AGENDA_PROGRESS: "ความคืบหน้าของแผนการทั้งหมด: $PROGRESS|0Y$/$COST|0Y$"
  AGENDA_COST_TITLE:0 "ค่าใช้จ่ายของแผน:"
  AGENDA_BASE_COST:0 "ค่าใช้จ่ายพื้นฐาน: $COST|Y$"
- AGENDA_COST_INCREASE_FROM_SPRAWL:1 "Increased Cost from $EMPIRE_SIZE$: $SPRAWL$"
+ AGENDA_COST_INCREASE_FROM_SPRAWL:1 "เพิ่มค่าใช้จ่ายจาก $EMPIRE_SIZE$: $SPRAWL$"
  AGENDA_TITLE:0 "แผนการของสภา"
  TOTAL_AGENDA_COST:0 "ทั้งหมด: $COST$"
  MOD_COUNCIL_AGENDA_PROGRESS_SPEED:0 "ความเร็วของแผนการของสภา"
@@ -1299,7 +1299,7 @@
  leader_trait_composer_chosen_desc:0 "$leader_trait_whisperers_chosen_desc$"
  leader_trait_instrument_chosen:0 "ผู้ถูกเลือกจากผู้บรรเลงดนตรี"
  leader_trait_instrument_chosen_desc:0 "$leader_trait_whisperers_chosen_desc$"
- planet_anglers:0 "Angler Jobs"
+ planet_anglers:0 "งานนักตกปลา"
  mod_planet_anglers_produces_mult:0 "ผลผลิต £job_angler£ นักตกปลา"
  mod_shipclass_military_build_speed_mult:0 "ความเร็วการสร้างยานทางทหาร"
  mod_ship_science_alloys_upkeep_add:0 "ยานวิจัยวิทยาศาสตร์มีค่าบำรุงรักษาที่เป็น £alloys£ โลหะผสม"
