--- a/mod/thmod/localisation/english/paragon_3_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_3_l_english.yml
@@ -644,10 +644,10 @@
  origin_legendary_leader_dictatorial_desc:0 "$origin_legendary_leader_desc$"
  origin_legendary_leader_death:0 "Broken Rule"
  origin_legendary_leader_death_desc:0 "Amidst political turmoil, and without the Luminary's guidance, the people must make their own way in the galaxy."
- origin_legendary_leader_no_gov_change:0 "Can't change Authority with Under One Rule Origin"
+ origin_legendary_leader_no_gov_change:0 "ไม่สามารถเปลี่ยนระบอบการปกครองที่มี จุดเริ่มต้น: 'ภายใต้กฎข้อเดียว' ได้"
  building_paragon_origin_academy:0 "Grand Academy"
  building_paragon_origin_academy_desc:0 "The Grand Academy is home to our best and brightest. Continuing to elevate their minds will benefit new leaders and allow us to educate future generations."
- mod_planet_clerks_unity_produces_add:0 "£unity£ $unity$ from £job_clerk£ $job_clerk_plural$"
+ mod_planet_clerks_unity_produces_add:0 "£unity£ $unity$ จาก £job_clerk£ $job_clerk_plural$"
  planet_clerks:0 "Clerk Jobs"
  commanding_presence:0 "อยู่ในที่ที่สามารถบังคับบัญชาได้"
  commanding_presence_desc:0 "Through the sheer willpower of our leader, we are able to extend our empire's agenda across space, and force others to heed our command."
@@ -655,10 +655,10 @@
  paragon_origin_strengthened_government_i_desc:0 "Our empire has focused on creating a better-managed and more stable government."
  paragon_origin_strengthened_government_ii:0 "$paragon_origin_strengthened_government_i$I"
  paragon_origin_strengthened_government_ii_desc:0 "$paragon_origin_strengthened_government_i_desc$ Special courses and pre-screening for government positions are a prerequisite to achieving this goal."
- paragon_origin_strengthened_government_ii_tt:1 "Each £job_clerk£ §Y$job_clerk$§! gets a §Y25%§! increase in $POLITICAL_POWER$\n£unity£ $unity$ from £job_clerk£ $job_clerk_plural$: §G+0.5§!"
+ paragon_origin_strengthened_government_ii_tt:1 "แต่ละ £job_clerk£ §Y$job_clerk$§! ได้รับ $POLITICAL_POWER$ เพิ่ม §Y25%§!\n£unity£ $unity$ จาก £job_clerk£ $job_clerk_plural$: §G+0.5§!"
  paragon_origin_strengthened_government_iii:0 "$paragon_origin_strengthened_government_i$II"
  paragon_origin_strengthened_government_iii_desc:0 "$paragon_origin_strengthened_government_ii_desc$ To further strengthen our clerical staff, we have implemented new regulations. Only the most upstanding and loyal citizens can apply for the job."
- paragon_origin_strengthened_government_iii_tt:1 "Each £job_clerk£ §Y$job_clerk$§! gets a §Y50%§! increase in $POLITICAL_POWER$\n£unity£ $unity$ from £job_clerk£ $job_clerk_plural$: §G+1§!\n£mod_country_edict_fund_add£ $MOD_COUNTRY_EDICT_FUND_ADD$ from £job_clerk£ $job_clerk_plural$: §G+1§!"
+ paragon_origin_strengthened_government_iii_tt:1 "แต่ละ £job_clerk£ §Y$job_clerk$§! ได้รับ $POLITICAL_POWER$ เพิ่มขึ้น §Y50%§!\n£unity£ $unity$ จาก £job_clerk£ $job_clerk_plural$: §G+1§!\n£mod_country_edict_fund_add£ $MOD_COUNTRY_EDICT_FUND_ADD$ จาก £job_clerk£ $job_clerk_plural$: §G+1§!"
  paragon_origin_humble_monument:0 "Humble Monument"
  paragon_origin_humble_monument_desc:0 "This modest monument is a tribute to our glorious leader, who elevated our nation to the stars."
  paragon_origin_rich_monument:0 "Rich Monument"
@@ -761,9 +761,9 @@
  leader_trait_legendary_industry_titan_desc:0 "This leader sees a healthy economy as the foundation of any great nation."
  leader_trait_legendary_great_inventor:0 "Great Inventor"
  leader_trait_legendary_great_inventor_desc:0 "This leader is a pioneer in robotics and our lead researcher in workforce automation."
- leader_trait_legendary_great_inventor_tt:1 "$t$£amenities£ Amenities from £job_roboticist£ $job_roboticist_plural$: §G+1§!\n$leader_trait_legendary_origin_desc$"
- leader_trait_legendary_great_inventor_2_tt:0 "$t$£amenities£ Amenities from £job_roboticist£ $job_roboticist_plural$: §G+2§!\n$leader_trait_legendary_origin_desc$"
- leader_trait_legendary_great_inventor_3_tt:0 "$t$£amenities£ Amenities from £job_roboticist£ $job_roboticist_plural$: §G+3§!\n$leader_trait_legendary_origin_desc$"
+ leader_trait_legendary_great_inventor_tt:1 "$t$£amenities£ ความอยู่ดีกินดี จาก £job_roboticist£ $job_roboticist_plural$: §G+1§!\n$leader_trait_legendary_origin_desc$"
+ leader_trait_legendary_great_inventor_2_tt:0 "$t$£amenities£ ความอยู่ดีกินดี จาก £job_roboticist£ $job_roboticist_plural$: §G+2§!\n$leader_trait_legendary_origin_desc$"
+ leader_trait_legendary_great_inventor_3_tt:0 "$t$£amenities£ ความอยู่ดีกินดี จาก £job_roboticist£ $job_roboticist_plural$: §G+3§!\n$leader_trait_legendary_origin_desc$"
  leader_trait_legendary_genetic_purist:0 "Genome Artist"
  leader_trait_legendary_genetic_purist_desc:1 "This leader's flair for genetic manipulation is legendary."
  leader_trait_legendary_evervigilant:0 "Ever Vigilant"
