--- a/mod/thmod/localisation/english/plantoids_l_english.yml
+++ b/mod/thmod/localisation/english/plantoids_l_english.yml
@@ -115,7 +115,7 @@
  disables_idyllic_bloom:0 "§Rการเลือกการยกระดับนี้จะปิดการใช้งานคุณสมบัติพลเมือง$civic_idyllic_bloom$§!"
  civic_tooltip_not_idyllic_bloom: "ไม่มีพลเมือง ['concept_idyllic_bloom_civics']"
  concept_idyllic_bloom_civics: "Idyllic Bloom"
- concept_idyllic_bloom_civics_desc: "$concept_idyllic_bloom_civics$ Civics consist of \n- ['civic:civic_idyllic_bloom']$NEW_LINE$- ['civic:civic_hive_idyllic_bloom']"
+ concept_idyllic_bloom_civics_desc: "คุณสมบัติพลเมือง $concept_idyllic_bloom_civics$ ประกอบด้วย\n- ['civic:civic_idyllic_bloom']$NEW_LINE$- ['civic:civic_hive_idyllic_bloom']"
  gaia_seeder_bloomed_pops_effect: "Having completed transformation of [This.GetName] into a $pc_gaia$, the Gaia Seeder will now transform our population to better adapt them to this world.\n\nIncreases the effects of the §Y$trait_plantoid_bloomed$§! and §Y$trait_plantoid_budding$§! Traits by §G+50%§!."
  gaia_seeder_bloom_timer_tooltip: "\nThe next Bloom on §Y[This.GetName]§! will occur on §Y[This.gaia_seeder_bloom_timer]§!."
  MESSAGE_POPS_IDYLLIC_BLOOMED_TITLE: "Pops Bloomed"
@@ -164,7 +164,7 @@
  thankful_for_gaia_desc:0 "Our Overlord has recently terraformed one of our planets into a gaia world. How kind of them!"
  trait_plantoid_phototrophic:0 "สังเคราะห์แสง"
  trait_plantoid_phototrophic_desc:0 "§LThis species is sustained by a combination of both food and sunlight.§!\n"
- TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT:0 "Replaces §Y50%§! of $r_food$ Upkeep with $r_energy$ Upkeep"
+ TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT:0 "แทนที่ค่าบำรุงรักษา §Y50%§! ของ $r_food$ ด้วย $r_energy$"
  trait_plantoid_radiotrophic:0 "สังเคราะห์รังสี"
  trait_plantoid_radiotrophic_desc:0 "§LThis species is sustained by a combination of both food and low-energy radiation, and as such can thrive on the most inhospitable of worlds.§!"
  TRAIT_PLANTOID_RADIOTROPHIC_EFFECT:1 "$TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT$\nการบำรุงรักษาที่เป็น £energy£ §Yพลังงาน§! ถูกลบออกสำหรับประชากรที่อาศัยอยู่บน §Yดาวแห่งความตาย§!\nการเพิ่มจำนวนของประชากรบน §Yดาวแห่งความตาย§!  §G+10%§!\nการอยู่อาศัยได้บนดาวแห่งความตาย: §G+10%§!"
@@ -204,7 +204,7 @@
  civic_machine_catalytic_processing_desc:0 "The Machine Intelligence reprocesses redundant organic matter into advanced resources suitable for spacebound structures."
  civic_tooltip_machine_catalytic_processing_effects:0 "แทนที่ £job_fabricator£ §Y$job_fabricator_plural$§! ด้วย £job_catalytic_drone£ §Y$job_catalytic_drone_plural$§! $job_catalytic_drone_effect_desc$.$catalytic_gestalt_additional_effects$"
  civic_tooltip_not_catalytic: "ไม่มีพลเมือง ['concept_catalytic_civics']"
- concept_catalytic_civics: "Catalytic Processing"
+ concept_catalytic_civics: "ตัวเร่งปฏิกิริยาแปรสภาพ"
  concept_catalytic_civics_desc: "$concept_catalytic_civics$ Civics consists of \n- ['civic:civic_catalytic_processing']$NEW_LINE$- ['civic:civic_corporate_catalytic_processing']$NEW_LINE$- ['civic:civic_hive_catalytic_processing']$NEW_LINE$- ['civic:civic_machine_catalytic_processing']"
  job_catalytic_technician:0 "ช่างเทคนิคเร่งปฏิกิริยา"
  job_catalytic_technician_plural:0 "ช่างเทคนิคเร่งปฏิกิริยา"
@@ -220,6 +220,6 @@
  mod_job_catalytic_drone_add:0 "งาน$job_catalytic_drone$"
  mod_job_catalytic_drone_per_pop:0 "§G+1§! อาชีพ$job_catalytic_drone$ ต่อ $VALUE$ ประชากร"
  mod_job_catalytic_drone_per_pop_short:0 "\n§G+1§! £mod_job_catalytic_drone_add£ ต่อ $VALUE$ £pop£"
- trait_invasive: "เผ่าพันธุ์รุกราน"
- TRAIT_INVASIVE_EFFECT: "§YCan only select negative or botanical traits§!\n\nHabitability: §G+5%§! for each negative trait selected\nPop Growth Speed: §G+5%§! for each negative trait selected"
+ trait_invasive: "เผ่าพันธุ์ที่แพร่กระจายอย่างรวดเร็ว"
+ TRAIT_INVASIVE_EFFECT: "§YCan only select negative or botanical traits§!\n\nการอยู่อาศัยได้: §G+5%§! สำหรับแต่ละลักษณะเชิงลบที่เลือก\nความเร็วในการเพิ่มประชากร: §G+5%§! สำหรับแต่ละคุณลักษณะเชิงลบที่เลือก"
  trait_invasive_desc: "Rapid reproduction. High dispersal ability. Zero useful capabilities."
