--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -959,7 +959,7 @@
  NUM_SPACEPORT_MODULES:0 "Number of spaceport modules is $COMPARATOR$ $NUM|Y$.\n"
  MAX_NAVAL_CAPACITY_TRIGGER:0 "ความจุของยานรบ $COMPARATOR$ $NUM|Y$"
  MAX_NAVAL_CAPACITY_NOT_TRIGGER:0 "ความจุของยานรบไม่ $COMPARATOR$ $NUM|Y$"
- ENCLAVE_CAPACITY_LEFT_TRIGGER:0 "Mercenary Enclave Capacity is $COMPARATOR$ $NUM|Y$."
+ ENCLAVE_CAPACITY_LEFT_TRIGGER:0 "ความจุกองยานทหารรับจ้าง Enclave $COMPARATOR$ $NUM|Y$."
  COMMAND_LIMIT_TRIGGER:0 "Command Limit is $COMPARATOR$ $NUM|Y$."
  COMMAND_LIMIT_NOT_TRIGGER:0 "Command Limit is NOT $COMPARATOR$ $NUM|Y$."
  USED_NAVAL_CAPACITY_PERCENT_TRIGGER:0 "ขนาดกองยานทั้งหมด $COMPARATOR$ $NUM|Y%0$ ของความจุยานรบ"
@@ -1685,8 +1685,8 @@
  DOES_NOT_HAVE_DIPLO_STANCE:0 "ไม่มีท่าทีทางการทูต $STANCE|Y$"
  TRIGGER_NOT_HAS_SPECIES_ARCHETYPE:1 "ไม่มีเผ่าพันธุ์ประเภท: $TYPE|Y$"
  TRIGGER_HAS_SPECIES_ARCHETYPE:1 "มีเผ่าพันธุ์ประเภท: $TYPE|Y$"
- TRIGGER_HAS_ORIGIN:2 "Has ['civic:$ORIGIN$', $ORIGIN_NAME$] Origin"
- TRIGGER_NOT_HAS_ORIGIN:2 "Does NOT have ['civic:$ORIGIN$', $ORIGIN_NAME$] Origin"
+ TRIGGER_HAS_ORIGIN:2 "มีจุดเริ่มต้น ['civic:$ORIGIN$', $ORIGIN_NAME$]"
+ TRIGGER_NOT_HAS_ORIGIN:2 "ไม่มีจุดเริ่มต้น ['civic:$ORIGIN$', $ORIGIN_NAME$]"
  HAS_ORIGIN_ICON_TIP:0 "This option is available due to $WHO|H$ having the $ORIGIN|Y$ Origin"
  ADD_FAVORS_EFFECT:0 "ได้บุญคุณ $NUM|Y$ เพื่อใช้กับ $TARGET|H$"
  REMOVE_FAVORS_EFFECT:0 "ลบบุญคุณ $NUM|Y$ จาก $TARGET|H$"
