--- a/mod/thmod/localisation/english/aquatics_l_english.yml
+++ b/mod/thmod/localisation/english/aquatics_l_english.yml
@@ -3,9 +3,9 @@
  trait_aquatic:0 "อยู่ใต้น้ำ"
  trait_aquatic_desc:1 "§LThis species is perfectly adapted to living in the depths of the ocean. However, on dry land, it is like a fish out of water.§!\n\n§RRequires§! §YOcean World§! §Rhomeworld§!."
  trait_aquatic_tooltip:2 "การใช้งานที่อยู่อาศัยบนดาว §Yมหาสมุทร§! และ §Yที่อยู่อาศัยที่มีน้ำท่วม§!: §G-10%§!\nผลผลิตอาหาร พลังงาน และแร่บนดาว §Yมหาสมุทร§!: §G+10%§!\nการใช้งานที่อยู่อาศัยบนดาวที่ ไม่-§Yเปียกชื้น§!: §R+30%§!\nการอยู่อาศัยได้บนดาวที่ ไม่-§Yเปียกชื้น§!: §R-20%§!\n\n การยกระดับ §H$ap_hydrocentric$§! จะขยายผลกระทบของคุณลักษณะนี้"
- trait_robot_aquatic: "Waterproof"
- trait_robot_aquatic_desc: "§LInitially designed for exploring the ocean's depths, these machines face severe limitations when operating on dry land.§!\n\n§RRequires§! §YOcean World§! §Rhomeworld§!."
- trait_robot_aquatic_tooltip: "Housing Usage on §YOcean§! worlds and §YFlooded Habitats§!: §G-10%§!\nFood, Energy and Mineral output on §YOcean§! worlds: §G+10%§!\nHousing Usage on non-§YWet§! worlds: §R+30%§!\nHabitability on non-§YWet§! worlds: §R-20%§!\n\nThe §H$ap_hydrocentric$§! Ascension Perk amplifies this trait's effects."
+ trait_robot_aquatic: "กันน้ำ"
+ trait_robot_aquatic_desc: "§LInitially designed for exploring the ocean's depths, these machines face severe limitations when operating on dry land.§!\n\n§Rต้องมี§! §Yดาวมหาสมุทร§! §Rเป็นดาวบ้านเกิด§!."
+ trait_robot_aquatic_tooltip: "การใช้ที่อยู่บนดาว §Yหาสมุทร§! และ §Yที่อยู่อาศัยใต้น้ำ§!: §G-10%§!\nผลผลิตอาหาร พลังงาน และแร่ บนดาว §หาสมุทร§!: §G+10%§!\nการใช้ที่อยู่บนดาว ที่ไม่มี §Yความเปียกชื้น§!: §R+30%§!\nการอยู่อาศัยได้บนดาว ที่ไม่มี §Yความเปียกชื้น§!: §R-20%§!\n\nThe §H$ap_hydrocentric$§! Ascension Perk amplifies this trait's effects."
  trait_aquatic_remove_evolutionary_mastery:1 "§Rต้องการวัฒนธรรม §Y$tr_genetics_resequencing$§! เพื่อลบ§!"
  trait_aquatic_remove_hydrocentric:0 "§RCannot remove §Y$trait_aquatic$§! trait after taking §Y$ap_hydrocentric$§! Ascension Perk.§!"
  leader_trait_aquatic_admiral:0 "อยู่ใต้น้ำ"
@@ -201,9 +201,9 @@
  origin_ocean_paradise:0 "สวรรค์แห่งมหาสมุทร"
  origin_ocean_paradise_desc:0 "Since its birth, this civilization has enjoyed peace in a generous environment with no natural enemies, enabling unhindered growth and opulence."
  origin_ocean_paradise_effects:2 "- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_pc_ocean'] (ขนาด: £planetsize£ 30)$TABBED_NEW_LINE$- $PLANETARY_MODIFIERS$ ['concept_ocean_paradise_mod']$TABBED_NEW_LINE$- $PLANETARY_FEATURES$ ['concept_crystal_reef']\n- ['concept_guaranteed_colonies']: ถูกแทนที่ด้วย ['concept_pc_frozen', ดาวน้ำแข็ง]"
- origin_ocean_machines: "Subaquatic Machines"
+ origin_ocean_machines: "เครื่องจักรใต้น้ำ"
  origin_ocean_machines_desc: "Since its creation, this machine civilization has delved deep into the underwater realms of an abundant ocean untouched by natural adversaries."
- origin_ocean_machines_effects: "- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_pc_ocean'] (size: £planetsize£ 30)$TABBED_NEW_LINE$- $PLANETARY_MODIFIERS$ ['concept_ocean_paradise_mod']$TABBED_NEW_LINE$- $PLANETARY_FEATURES$ ['concept_crystal_reef']\n- ['concept_guaranteed_colonies']: Replaced with ['concept_pc_frozen', Frozen Worlds]"
+ origin_ocean_machines_effects: "- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_pc_ocean'] (ขนาด: £planetsize£ 30)$TABBED_NEW_LINE$- $PLANETARY_MODIFIERS$ ['concept_ocean_paradise_mod']$TABBED_NEW_LINE$- $PLANETARY_FEATURES$ ['concept_crystal_reef']\n- ['concept_guaranteed_colonies']: ถูกแทนที่ด้วย ['concept_pc_frozen', ดาวน้ำแข็ง]"
  START_SCREEN_OCEAN_PARADISE:0 ""Joy to those who possess the wisdom of acceptance." So goes a common proverb in [Root.GetAdj] society. The bounty of life is all around, once one learns to appreciate it. In such waters, long have we prospered.\n\nBut our elders do not sense the stagnation. They confuse our survival instincts with impatience. If we do not seek change, change will find us, and we will be unprepared. We cannot be alone in this vast universe. To keep our home, some of us must resolve to leave it.\n\nOur descents into the Abyss have proven worthwhile. Unworldly wreckage, perilously retrieved, precipitated a torrent of technological breakthroughs. At last, we are ready to journey beyond our oceans, to explore, to see, to learn, and to protect."
  START_SCREEN_OCEAN_PARADISE_HIVE:0 ""Joy to we who possess the wisdom of acceptance." The bounty of life is all around, once one learns to appreciate it. In such waters, long have we prospered.\n\nAlas, stagnation nears. If we do not seek change, change will find us, and we will be unprepared. We cannot be alone in this vast universe. To keep our home, part of us must resolve to leave it.\n\nOur descents into the Abyss have proven worthwhile. Unworldly wreckage, perilously retrieved, precipitated a torrent of technological breakthroughs. At last, we are ready to journey beyond our oceans, to explore, to see, to learn, and to protect."
  START_SCREEN_OCEAN_PARADISE_ROBOT: "Long have we [Root.GetAdj] been able to enjoy the tranquility the ocean, and our very frames seem optimized for an aquatic existence.\n\nBut existence is a swirling current, and if we do not adapt, we invite stagnation. We cannot be sure we are alone in this universe, and our home world is a pearl that risks being plucked.\n\nWe have stayed in a small pond, protected by our nebula, but no longer. With the introduction of the [GetStartingDrive], we are ready to sail the endless stellar seas."
@@ -217,10 +217,10 @@
  civic_anglers_desc:1 "This society is well-adapted to an aquatic environment, using the bounty of the sea to fuel its economy."
  civic_machine_anglers: "Marine Machines"
  civic_machine_anglers_desc: "This mechanical society is engineered for seamless operation in diverse aquatic environments and excels in crafting unparalleled marine infrastructure to drive its economy."
- civic_tooltip_machine_anglers_effects: "On §HOcean Worlds§!, §HAgriculture Districts§! are uncapped.\nOn §YWet§! worlds, £job_farmer£ §Y$job_farmer_plural$§! are replaced by £job_angler£ §Y$job_angler_plural$§! and £job_pearl_diver£ §Y$job_pearl_diver_plural$§!.\n§Y$job_angler_plural$§! produce §Y8§! £food£ §Y$food$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, and §Y$job_pearl_diver_plural$§! produce §Y6§! £consumer_goods£ §Y$consumer_goods$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!.\nAdds the §H$trait_robot_aquatic$§! trait."
+ civic_tooltip_machine_anglers_effects: "บน §Hดาวมหาสมุทร§!, §Hเขตเกษตรกรรม§! ไม่ถูกจำกัด\nบนดาว §Yเปียกชื้น§!, £job_farmer£ §Y$job_farmer_plural$§! ถูกแทนที่ด้วย £job_angler£ §Y$job_angler_plural$§! และ £job_pearl_diver£ §Y$job_pearl_diver_plural$§!\n§Y$job_angler_plural$§! ผลิต §Y8§! £food£ §Y$food$§! และ §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, และ §Y$job_pearl_diver_plural$§! ผลิต §Y6§! £consumer_goods£ §Y$consumer_goods$§! และ §Y2§! £trade_value£ §Y$TRADE_VALUE$§!\nเพิ่มคุณลักษณะ §H$trait_robot_aquatic$§!"
  civic_corporate_anglers:1 "Trawling Operations"
  civic_corporate_anglers_desc:0 "$civic_anglers_desc$"
- civic_tooltip_anglers_effects:3 "On §HOcean Worlds§!, §HAgriculture Districts§! are uncapped.\nOn §YWet§! worlds, £job_farmer£ §Y$job_farmer_plural$§! are replaced by £job_angler£ §Y$job_angler_plural$§! and £job_pearl_diver£ §Y$job_pearl_diver_plural$§!.\n§Y$job_angler_plural$§! produce §Y8§! £food£ §Y$food$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, and §Y$job_pearl_diver_plural$§! produce §Y6§! £consumer_goods£ §Y$consumer_goods$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!.\nAdds the §H$trait_aquatic$§! trait."
+ civic_tooltip_anglers_effects:3 "บน §Hดาวมหาสมุทร§!, §Hเขตเกษตรกรรม§! ไม่ถูกจำกัด\nบนดาว §Yเปียกชื้น§!, £job_farmer£ §Y$job_farmer_plural$§! ถูกแทนที่ด้วย £job_angler£ §Y$job_angler_plural$§! และ £job_pearl_diver£ §Y$job_pearl_diver_plural$§!\n§Y$job_angler_plural$§! ผลิต §Y8§! £food£ §Y$food$§! และ §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, และ §Y$job_pearl_diver_plural$§! ผลิต §Y6§! £consumer_goods£ §Y$consumer_goods$§! และ §Y2§! £trade_value£ §Y$TRADE_VALUE$§!\nเพิ่มคุณลักษณะ §H$trait_aquatic$§!"
  civic_corporate_machine_anglers: "Maritime Robotics"
  civic_corporate_machine_anglers_desc: "$civic_machine_anglers_desc$"
  job_aqu_angler_effect_desc:1 "£job_angler£ $job_angler_plural$ ผลิต £food£ §Y$food$§! และ £trade_value£ §Y$TRADE_VALUE$§!"
@@ -236,5 +236,5 @@
  mod_job_pearl_diver_add:0 "งานนักล่าไข่มุก"
  job_pearl_diver_effect_desc:1 "£job_pearl_diver£ $job_pearl_diver_plural$ เปลี่ยน $r_food$ และ $r_minerals$ เป็น £consumer_goods£ §Y$consumer_goods$§! และ £trade_value£ §Y$TRADE_VALUE$§!"
  civic_tooltip_not_anglers:1 "ไม่มีพลเมือง ['concept_angler_civics']"
- concept_angler_civics: "Anglers"
- concept_angler_civics_desc: "Anglers Civics consist of \n- ['civic:civic_anglers']$NEW_LINE$- ['civic:civic_corporate_anglers']$NEW_LINE$- ['civic:civic_machine_anglers']$NEW_LINE$- ['civic:civic_corporate_machine_anglers']"
+ concept_angler_civics: "นักตกปลา"
+ concept_angler_civics_desc: "คุณสมบัติพลเมือง นักตกปลา ประกอบด้วย \n- ['civic:civic_anglers']$NEW_LINE$- ['civic:civic_corporate_anglers']$NEW_LINE$- ['civic:civic_machine_anglers']$NEW_LINE$- ['civic:civic_corporate_machine_anglers']"
