--- a/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
@@ -61,7 +61,7 @@
  concept_survivor: "$trait_survivor$"
  concept_survivor_desc: "- การอยู่อาศัยได้บนดาวแห่งความตาย: §G+70%§!\n- อายุขัยผู้นำ: §G+10§! ปี\n\n§L$trait_survivor_desc$§!"
  concept_robot_survivor: "$trait_robot_survivor$"
- concept_robot_survivor_desc: "- Tomb World Habitability: §G+70%§!\n- Leader Lifespan: §G+10§! Years\n\n§L$trait_robot_survivor_desc$§!"
+ concept_robot_survivor_desc: "- การอยู่อาศัยได้บนดาวแห่งความตาย: §G+70%§!\n- อายุขัยผู้นำ: §G+10§! ปี\n\n§L$trait_robot_survivor_desc$§!"
  concept_pc_relic: "$pc_relic$"
  concept_pc_relic_desc: "- การอยู่อาศัยได้ (พื้นฐาน): §Y80%§!\n- สามารถกู้คืนได้โดย §Iการตัดสินใจของดาวเคราะห์§! ที่จะปลดล็อก £district£ §Iเขตมหานคร§! พิเศษ\n\n§L$pc_relic_desc$§!"
  concept_ruined_arcology: "$d_ruined_arcology$"
@@ -100,7 +100,7 @@
  concept_no_lifetree_desc: "$NEW_LINE$- Planetary Build Speed: §R-50%§!$NEW_LINE$- Resources from Jobs: §R-25%§!$NEW_LINE$- Upkeep from Jobs: §R+10%§!$NEW_LINE$- Stability: §R-5%§!\n\n§L$no_lifetree_desc$§!"
  concept_ex_gravitas: "$site_ex_gravitas$"
  concept_ex_gravitas_desc: "§Lตรวจพบอักขระที่ผิดปกติในระบบบ้านเกิดของเรา เราจำเป็นต้องเริ่มการสำรวจพื้นผิวเพื่อหาข้อมูลเพิ่มเติม§!"
- concept_lithoid_traits: "Lithoid Traits"
+ concept_lithoid_traits: "คุณลักษณะ Lithoid"
  concept_lithoid_traits_desc: "Lithoid Traits include §I$trait_lithoid_gaseous_byproducts$§!, §I$trait_lithoid_scintillating$§!, §I$trait_lithoid_volatile_excretions$§!, and §I$trait_lithoid_budding$§!."
  concept_lithoid_origin: "$origin_lithoid$"
  concept_lithoid_origin_desc: "§L$origin_lithoid_desc$§!"
@@ -219,9 +219,9 @@
  concept_clinic: "$building_clinic$"
  concept_clinic_desc: "- £mod_job_healthcare_add£ งาน ['concept_healthcare', $job_healthcare$]: §G+2§!\n\n§L$building_clinic_desc$§!"
  concept_mineral_purification_plant: "$building_mineral_purification_plant$"
- concept_mineral_purification_plant_desc: "- £mod_job_miner_add£ งาน ['concept_miner', $job_miner$]: §G+1§!\n- £minerals£ Minerals from £job_miner£ $job_miner_plural$: §G+1§!\n\n§L$building_mineral_purification_plant_desc$§!"
+ concept_mineral_purification_plant_desc: "- £mod_job_miner_add£ งาน ['concept_miner', $job_miner$]: §G+1§!\n- £minerals£ แร่จาก £job_miner£ $job_miner_plural$: §G+1§!\n\n§L$building_mineral_purification_plant_desc$§!"
  concept_energy_grid: "$building_energy_grid$"
- concept_energy_grid_desc: "- £mod_job_technician_add£ งาน ['concept_technician', $job_technician$]: §G+1§!\n- £energy£ Energy from £job_technician£ $job_technician_plural$: §G+1§!\n\n§L$building_energy_grid_desc$§!"
+ concept_energy_grid_desc: "- £mod_job_technician_add£ งาน ['concept_technician', $job_technician$]: §G+1§!\n- £energy£ พลังงานจาก £job_technician£ $job_technician_plural$: §G+1§!\n\n§L$building_energy_grid_desc$§!"
  concept_bureaucratic_1: "$building_bureaucratic_1$"
  concept_bureaucratic_1_desc: "- งาน ['concept_bureaucrat', $job_bureaucrat$]: §G+2§!\n\n§L$building_bureaucratic_1_desc$§!"
  concept_commercial_zone: "$building_commercial_zone$"
