--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -153,7 +153,7 @@
  civic_tooltip_reanimated_armies_effects:3 "สามารถสร้าง £building£ §Yค่ายที่พักที่น่ากลัว§! ที่จะอนุญาตให้มีงาน £job_necromancer£ §Yเนโครแมนเซอร์§! และอนุญาตให้มีการคัดเลือก §Yกองทัพผีดิบ§!\n$job_necromancer_effect_desc$\nให้สิทธิ์การเข้าถึงสิ่งปลูกสร้าง £building£ §Y$holding_dread_outpost$§!\nกองทัพสิ่งมีชีวิตที่ถูกกำจัดจะถูกทำให้ฟื้นคืนชีพเป็น §Yกองทัพผีดิบ§!\nสิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง"
  building_dread_encampment:0 "ค่ายที่พักที่น่ากลัว"
  building_dread_encampment_desc:2 "It is best to shield the activities of the necromancers from the tender view of the public as they raise undead hordes to fight in our armies."
- job_necromancer_effect_desc:3 "£job_necromancer£ $job_necromancer_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £physics£ £society£ §YResearch Points§! and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, and spawn £defense_army£ §YUndead Defense Armies§!"
+ job_necromancer_effect_desc:3 "£job_necromancer£ $job_necromancer_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น £physics£ £society£ §Yแต้มการวิจัย§! และ £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! พร้อมทั้ง £defense_army£ §Yกองทัพป้องกัน(กองทัพผีดิบ)§!"
  undead_army:0 "กองทัพผีดิบ"
  undead_army_desc:1 "Undead soldiers lifted from the grave by necromancers. Freed from the fear of death, they strike terror into the hearts of their enemies with their foul bearing and ferocity in battle!"
  undead_army_plural:0 "กองทัพผีดิบ"
