--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -783,7 +783,7 @@
  councilor_death_cult_female:0 "$councilor_death_cult$"
  councilor_death_cult_desc:1 "The $TITLE$ presides over sacrificial rituals."
  councilor_death_cult_custom_modifier_desc:1 "- ผลของประกาศคำสั่งบวงสรวง: §G+2%§!"
- councilor_death_cult_corporate:0 "Chief Executive Executioner"
+ councilor_death_cult_corporate:0 "หัวหน้าผู้บริหารเพชฌฆาต"
  councilor_death_cult_corporate_female:0 "$councilor_death_cult_corporate$"
  councilor_death_cult_corporate_desc:0 "$councilor_death_cult_desc$"
  councilor_diplomatic_corps:0 "เอกอัครราชทูตระดับสูง"
@@ -1093,10 +1093,10 @@
  agenda_open_markets_finish:0 "$council_agenda_agenda_open_markets_name$ $agenda_ref$"
  agenda_open_markets_finish_desc:0 "$council_agenda_agenda_open_markets_desc$"
  council_agenda_agenda_open_markets_criminal_heritage_name: "$council_agenda_agenda_open_markets_name$"
- council_agenda_agenda_open_markets_criminal_heritage_desc: "We are entirely committed to maximizing the benefits for all of our Clientele."
+ council_agenda_agenda_open_markets_criminal_heritage_desc: "เรามุ่งมั่นอย่างเต็มที่ที่จะเพิ่มผลประโยชน์สูงสุดให้กับลูกค้าของเราทุกคน"
  agenda_open_markets_criminal_heritage_finish: "$council_agenda_agenda_open_markets_criminal_heritage_name$ $agenda_ref$"
  agenda_open_markets_criminal_heritage_finish_desc: "$council_agenda_agenda_open_markets_criminal_heritage_desc$"
- mod_branch_office_holding_crime_mult: "Crime from Branch Office Holdings"
+ mod_branch_office_holding_crime_mult: "อาชญากรรมจากสำนักงานสาขาที่ถือครอง"
  council_agenda_agenda_favored_society_name:0 "สังคมที่ได้รับการสนับสนุน"
  council_agenda_agenda_favored_society_desc:1 "เราเลือกที่จะจ่ายเป็นพิเศษให้กับพลเมืองที่อาศัยและทำงานที่ดาวศูนย์กลางจักรวรรดิของเรา (ดาวเมืองหลวง)"
  agenda_favored_society_finish:0 "$council_agenda_agenda_favored_society_name$ $agenda_ref$"
