--- a/mod/thmod/localisation/english/toxoids_l_english.yml
+++ b/mod/thmod/localisation/english/toxoids_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  origin_toxic_knights:0 "อัศวินของเทพทรพิษ"
  origin_toxic_knights_desc:2 "เมื่อหลายทศวรรศก่อน มีเอนทิตี้ เคยมาเยือนและสร้างมหันตภัยที่ทำลายโลกไปครึ่งหนึ่ง เหลือไว้อีกครึ่งให้กับเหล่าพลเมืองที่บูชาเอนทิตี้นี้เป็นเทพทรพิษของพวกเขา ภาคีอัศวินได้ถูกก่อตั้งขึ้นเพื่อออกตามหาเทพของพวกเขาในอวกาศอันกว้างใหญ่นี้"
- origin_toxic_knights_effects:3 "- Homeworld: $TABBED_NEW_LINE$- ['concept_toxic_features'] $TABBED_NEW_LINE$- ['concept_pc_habitat', ที่อยู่อาศัยวงโคจรดาว] ที่มีลักษณะเฉพาะ: $TABBED_NEW_LINE$$t$- ['concept_order_keep', £building£ $building_order_keep$] $TABBED_NEW_LINE$$t$- ['concept_orders_demesne', £district£ $district_orders_demesne$] $TABBED_NEW_LINE$$t$- งาน ['concept_politician', £job_politician£ $job_politician$] ถูกแทนที่ด้วย ['concept_order_jobs'] $NEW_LINE$- สถานการณ์: ['concept_knights_quest'] $NEW_LINE$- นโยบาย: §IKnightly Duties§! $NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_knight_commandery', £building£ Order's Commanderies] ในอาณานิคมของเมืองขึ้น"
+ origin_toxic_knights_effects:3 "- ดาวบ้านเกิด: $TABBED_NEW_LINE$- ['concept_toxic_features'] $TABBED_NEW_LINE$- ['concept_pc_habitat', ที่อยู่อาศัยวงโคจรดาว] ที่มีลักษณะเฉพาะ: $TABBED_NEW_LINE$$t$- ['concept_order_keep', £building£ $building_order_keep$] $TABBED_NEW_LINE$$t$- ['concept_orders_demesne', £district£ $district_orders_demesne$] $TABBED_NEW_LINE$$t$- งาน ['concept_politician', £job_politician£ $job_politician$] ถูกแทนที่ด้วย ['concept_order_jobs'] $NEW_LINE$- สถานการณ์: ['concept_knights_quest'] $NEW_LINE$- นโยบาย: §IKnightly Duties§! $NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_knight_commandery', £building£ Order's Commanderies] ในอาณานิคมของเมืองขึ้น"
  origin_toxic_knights_negative_effects: "- $INITIAL_POPS$ §R-3§!"
  START_SCREEN_TOXIC_KNIGHTS:1 "Long ago, our planet was divided. Petty kings squabbled constantly, and our population bled for their vain ambitions. But with the coming of the first High King, all of this changed. Their inspired leadership forged a kingdom without equal.\n\nAbove all else, the High King was pious. War was waged against any who denied their God, but still the heretics persisted. The King's prayers were answered when the Toxic God visited our world. Though its time among us was brief, its baneful influence poisoned the lands of the unbelievers. Any who survived pledged fealty to the High King. For the first time, our world was unified.\n\nThe Toxic God soon left us, but the King, determined to find it, founded an order of knights. For centuries, these valiant souls searched tirelessly, but to no avail. The Toxic God had long since departed from our world. The next chapter of the Quest would be written in the stars. With the use of powerful relics, it was the Order that built our Empire's first orbital station. A mighty Keep, it would become the springboard from which they plunged ever deeper into the cosmos."
  START_SCREEN_TOXIC_KNIGHTS_CORPORATE:0 "Long ago, our planet was divided. Petty kings squabbled constantly, and our population bled for their vain ambitions. But with the coming of the first High King, all of this changed. Their inspired leadership forged a kingdom without equal.\n\nAbove all else, the High King was pious. War was waged against any who denied their God, but still the heretics persisted. The King's prayers were answered when the Toxic God visited our world. Though its time among us was brief, its baneful influence poisoned the lands of the unbelievers. Any who survived pledged fealty to the High King. For the first time, our world was unified.\n\nThe Toxic God soon left us, but the King, determined to find it, founded an order of knights. For centuries, these valiant souls searched tirelessly, but to no avail. The Quest is a very expensive prospect. Over time, the kingdom became more and more interested in the pursuit of profit to better support the knights. By living and consuming, every citizen supports the Quest, and our champions are heavily mediatized.\n\nThe Toxic God has long since departed from our world and the next chapter of the Quest would be written in the stars. With the use of powerful relics, it was the Order that built our Empire's first orbital station. A mighty Keep, it would become the springboard from which they plunged ever deeper into the cosmos."
@@ -462,7 +462,7 @@
  civic_machine_toxic_baths_desc:0 "This machine empire improved upon its basic drone-shell production through the vigorous application of highly aggressive lubrication agents, controlled by carefully programmed terminals. This 'optimized' process relies on typically wasted byproducts from the industries that are now repurposed for maximal efficiency."
  civic_tooltip_not_mutagenic: "ไม่มีพลเมือง ['concept_mutagenic_civics']"
  concept_mutagenic_civics: "Mutagenic Spas"
- concept_mutagenic_civics_desc: "$concept_mutagenic_civics$ Civics consist of \n- ['civic:civic_toxic_baths']$NEW_LINE$- ['civic:civic_toxic_baths_individual_machine']$NEW_LINE$- ['civic:civic_corporate_toxic_baths']$NEW_LINE$- ['civic:civic_corporate_toxic_baths_individual_machine']$NEW_LINE$- ['civic:civic_hive_toxic_baths']$NEW_LINE$- ['civic:civic_machine_toxic_baths']"
+ concept_mutagenic_civics_desc: "คุณสมบัติพลเมือง $concept_mutagenic_civics$ ประกอบด้วย \n- ['civic:civic_toxic_baths']$NEW_LINE$- ['civic:civic_toxic_baths_individual_machine']$NEW_LINE$- ['civic:civic_corporate_toxic_baths']$NEW_LINE$- ['civic:civic_corporate_toxic_baths_individual_machine']$NEW_LINE$- ['civic:civic_hive_toxic_baths']$NEW_LINE$- ['civic:civic_machine_toxic_baths']"
  building_toxic_bath:0 "Mutagenic Spa"
  building_toxic_bath_hive:0 "Mutagenic Permutation Pool"
  building_toxic_bath_machine:0 "Hyper Lubrication Basin"
@@ -524,7 +524,7 @@
  building_coordinated_fulfillment_center_tooltip:0 "§RThis world will be exploited ruthlessly. Eventually, it will be rendered a Tomb World.§!"
  civic_tooltip_not_relentless_industrialists: "ไม่มีพลเมือง ['concept_industrialist_civics']"
  concept_industrialist_civics: "Relentless Industrialist"
- concept_industrialist_civics_desc: "$concept_industrialist_civics$ Civics consist of \n- ['civic:civic_relentless_industrialists']$NEW_LINE$- ['civic:civic_corporate_relentless_industrialists']"
+ concept_industrialist_civics_desc: "คุณสมบัติพลเมือง $concept_industrialist_civics$ ประกอบด้วย \n- ['civic:civic_relentless_industrialists']$NEW_LINE$- ['civic:civic_corporate_relentless_industrialists']"
  toxoids.5.name:0 "Excessive Exploitation of [Root.GetName]"
  toxoids.5.desc:0 "Our exploitation of [Root.GetName] has caused significant - perhaps irreversible - changes to the world's environment. Industrial pollution has caused significant climatic disruption via a runaway greenhouse effect, and rampant radioactive leaks have rendered large swaths of the [Root.GetPlanetMoon] uninhabitable by conventional means.\n\nThe process has now reached a tipping point. Unless we change our ways and start mitigating our impact on the planetary environment, we will be unable to prevent outright calamity: an inhospitable and irradiated world to match the worst of doomsayers' warnings, characterized by turbulent seas and unbroken lifeless wastelands."
  relentless_industrialists_situation:0 "Environmental Deterioration of [Target.GetName]"
@@ -590,13 +590,13 @@
  civic_corporate_scavengers:1 "Refurbishment Division"
  civic_corporate_scavengers_desc:0 "$civic_scavengers_desc$"
  trait_incubator:0 "ผู้ฟักไข่,ผู้เพาะเลี้ยง"
- incubator_tooltip:1 "Grants between §G+30%§! and §R-10%§! Pop Growth Speed, inversely proportional to the number of pops on the planet."
+ incubator_tooltip:1 "ความเร็วการเพิ่มประชากรระหว่าง §G+30%§! ถึง §R-10%§! แปรผกผันกับจำนวนประชากรบนดาว"
  trait_incubator_desc:1 "§LWhen isolated or few in numbers, a species with this trait naturally adapts and is able to focus on procreation with an intentness others would consider extreme. However, when in large numbers, this effect is reversed, and they find reproduction more difficult.§!"
  trait_inorganic_breath:0 "ลมหายใจอนินทรีย์"
  inorganic_breath_tooltip:2 "Each pop working as a slave or better produces 0.02 £exotic_gases£ §Y$exotic_gases$§! per month."
  trait_inorganic_breath_desc:0 "§LThe slightly toxic digestive methods of this species have resulted in a highly exotic breath composition.§!"
  trait_noxious:0 "เป็นพิษ"
- noxious_tooltip:2 "Happiness to non-noxious Pops: §R$@noxious_happiness_penalty|%$§!\nHappiness per non-noxious Pop (not including Pops unaffected by Happiness): §G$@noxious_happiness_bonus|%$§! (max: §G+40%§!)"
+ noxious_tooltip:2 "ความสุขของประชากร non-noxious: §R$@noxious_happiness_penalty|%$§!\nความสุขต่อประชากร non-noxious (ไม่รวมประชากรที่ไม่ได้รับผลกระทบจากความสุข): §G$@noxious_happiness_bonus|%$§! (สูงสุด: §G+40%§!)"
  trait_noxious_desc:1 "§LExtremely unpleasant to be in the vicinity of, beings with this trait take vindication from being insufferable to everyone else.§!"
  noxious_stock:0 "Noxious pops cannot be livestock"
  mod_pop_non_noxious_happiness:0 "Noxious Neighbor"
@@ -640,7 +640,7 @@
  technical_skill_tooltip:0 "£energy£ พลังงานจาก £pops£ งาน: §G+15%§!"
  trait_commercial_genius: "Commercial Genius"
  trait_commercial_genius_desc: "§LBy tweaking agreeability and dialing down empathy, anyone can be turned into a trading genius. The pursuit of unmatched commercial dominance outweighs any potential side effects.§!"
- trait_commercial_genius_tooltip: "£trade_value£ Trade from £pops£ Jobs: §G+25%§!"
+ trait_commercial_genius_tooltip: "£trade_value£ มูลค่าการค้าจาก งาน £pops£: §G+25%§!"
  trait_crafted_smiles:0 "ยิ้มศัลยกรรม"
  trait_crafted_smiles_desc:0 "§LSlightly shifted facial features, a mix of enhanced and slackened muscular development - and of course outside chemicals - have created the perfect smile. Forever.§!"
  crafted_smiles_tooltip:0 "£amenities£ ความอยู่ดีกินดีจาก £pops£ งาน: §G+15%§!"
